have background, fixed width tag, and wrapping silowettes

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,11 +1,14 @@
 /*body { margin: 10%; }*/
-body { background: #aa0f00; }
+body { 
+  background-image: url("https://raw.githubusercontent.com/montanafowler/leilah_website/main/images/crumpled_paper.jpg");
+  background-color: #cccccc; 
+}
 * {
   box-sizing: border-box;
 }
 
 #tag_menu_image {
-  width: 100%;
+  width: 200px;
 }
 
 ul {
@@ -27,7 +30,7 @@ li {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #00f155;
+  /*background-color: #00f155;*/
   padding: 10px;
 }
 
@@ -59,7 +62,7 @@ nav {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background: #ccc;
+  /*background: #ccc;*/
   padding: 20px;
 }
 
